@@ -33,6 +33,10 @@ GNU sed NEWS                                    -*- outline -*-
     5
     6
 
+  An erroneous sed invocation like "echo > F; sed -i s//b/ F" no longer
+  leaves behind a temporary file.  Before, that command would create a file
+  alongside F with a name matching /^sed......$/ and fail to remove it.
+
 ** Feature removal
 
   The "L" command (format a paragraph like the fmt(1) command would)
